# docpeel

./: .env.example  .gitignore  DOCPEEL_DESIGN.md  README.md  STATUS.md  pyproject.toml
scripts/benchmark/: benchmark.py  benchmarks.example.yaml  my-benchmarks.yaml
src/docpeel/: cli.py  extraction.py  image_utils.py  output.py  pricing.py
src/docpeel/providers/: anthropic.py  base.py  gemini.py  mistral.py  provider_factory.py
src/pdfextract/: cli.py  extraction.py  output.py  pricing.py  prompts.py  providers.py
src/pdfextract/providers/: anthropic.py  gemini.py  mistral.py  provider_factory.py
tests/: test_base_provider.py  test_benchmark.py  test_cli.py  test_extraction_unpack.py  test_image_utils.py  test_iter_pages_logging.py  test_merge_continued_tables.py  test_mistral_extractor.py  test_output_consistency.py  test_output_helpers.py  test_parse_pages.py  test_pricing.py  test_pricing_cache.py  test_vision_extractor.py
